# tevatron

./: .gitignore  README.md  main.py  pyproject.toml  upload_emb.py
exp/: run_qwen3_0.6B_emb_fine_web.sh  run_qwen3_8B_emb_fine_web.sh  run_qwen3_8B_emb_miroverse.sh  run_qwen3_8B_query_emb_browsecomp.sh
exp/trec_eval/: eval_browsecomp_plus_fineweb_10bt_merge_qwen3_0.6B.sh  eval_browsecomp_plus_fineweb_10bt_merge_qwen3_8b.sh  eval_browsecomp_plus_fineweb_10bt_qwen3_0.6B.sh  eval_browsecomp_plus_qwen3_0.6B.sh
src/tevatron/retriever/: collator.py
src/tevatron/retriever/driver/: search.py  vllm_encode.py
