[project]
name = "tevatron"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.2",
    "deepspeed>=0.18.3",
    "faiss-cpu>=1.13.2",
    "flash-attn",
    "openai[aiohttp]>=2.14.0",
    "peft>=0.18.0",
    "pyserini>=1.4.0",
    "qwen-omni-utils>=0.0.8",
    "transformers>=4.57.3",
    "vllm==0.12",
]

[tool.uv.sources]
flash-attn = { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.4.15/flash_attn-2.8.3+cu126torch2.9-cp312-cp312-linux_x86_64.whl" }
